Improve translation quality (part3)

--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -617,6 +617,9 @@ C_COLOR_YELLOW=Amarillo
 C_CONTINUE=Continuar
 C_CREATEDBY=Creado por
 
+C_DUET=Dueto
+C_DUETS=Duetos
+
 C_ERROR=Error
 
 C_FIND=Buscar
