--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -617,6 +617,9 @@ C_COLOR_YELLOW=Jaune
 C_CONTINUE=Continuer
 C_CREATEDBY=Créée par
 
+C_DUET=Duo
+C_DUETS=Duos
+
 C_ERROR=Erreur
 
 C_FIND=Rechercher
