--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -617,6 +617,9 @@ C_COLOR_YELLOW=黄
 ;TODO: C_CONTINUE=Continue
 ;TODO: C_CREATEDBY=Created by
 
+;TODO: C_DUET=Duet
+;TODO: C_DUETS=Duets
+
 ;TODO: C_ERROR=Error
 
 ;TODO: C_FIND=Find
