Moved developers and website url out from translations

--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -548,10 +548,10 @@ ABOUT_CHECK_CHECKING=S'estan cercant noves actualitzacions...
 ABOUT_CHECK_AVAILABLE=Hi ha una nova versió disponible
 ABOUT_CHECK_UPTODATE=WorldParty està actualitzat
 ABOUT_CHECK_CONNECTION=No hi ha connexió a Internet
-ABOUT_OVERVIEW=Descobreix una nova manera de cantar, sol, en parella o amb amics. \n La diversió està garantida.\n\nWorldParty és un fork de la versió original Ultrastar Deluxe 1.1 dissenyat i desenvolupat per l'equip UltraStar España, compta amb la comunitat de karaoke més gran.\n\n\nAquest programa és gratuït i libre sota la llicència GPL. \n\n Visiteu-nos per obtenir més informació.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Descobreix una nova manera de cantar, sol, en parella o amb amics. \n La diversió està garantida.\n\nWorldParty és un fork de la versió original Ultrastar Deluxe 1.1 dissenyat i desenvolupat per l'equip UltraStar España, compta amb la comunitat de karaoke més gran.\n\n\nAquest programa és gratuït i libre sota la llicència GPL. \n\n Visiteu-nos per obtenir més informació.\n%s
 
 DEVELOPERS_TITLE=Desenvolupat per
-DEVELOPERS_OVERVIEW=Persones que han contribuït a aquest projecte:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visiteu-nos per obtenir més informació.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Persones que han contribuït a aquest projecte:\n\n\n%s\n\n\n Visiteu-nos per obtenir més informació.\n%s
 
 SCREENSHOT_SAVED=S'ha desat la captura de pantalla
 ;TODO: SCREENSHOT_FAILED=Couldn't save screenshot
