--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -548,10 +548,10 @@ ABOUT_CHECK_CHECKING=Buscando actualizaciones...
 ABOUT_CHECK_AVAILABLE=Hay disponible una nueva versión
 ABOUT_CHECK_UPTODATE=WorldParty está actualizado
 ABOUT_CHECK_CONNECTION=No hay conexión a Internet
-ABOUT_OVERVIEW=Descubre una nueva manera de cantar, solo, en pareja o con amigos. \nLa diversión estará asegurada.\n\nWorldParty es una modificación de la versión original Ultrastar Deluxe 1.1 diseñado y desarrollado por el equipo de UltraStar España, cuenta con el apoyo de la comunidad más grande del mundo de karaoke. \n\n\nEste programa es gratuito y libre bajo licencia GPL. \n\nVisitad nuestra web para más información.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Descubre una nueva manera de cantar, solo, en pareja o con amigos. \nLa diversión estará asegurada.\n\nWorldParty es una modificación de la versión original Ultrastar Deluxe 1.1 diseñado y desarrollado por el equipo de UltraStar España, cuenta con el apoyo de la comunidad más grande del mundo de karaoke. \n\n\nEste programa es gratuito y libre bajo licencia GPL. \n\nVisitad nuestra web para más información.\n%s
 
 DEVELOPERS_TITLE=Desarrollado por
-DEVELOPERS_OVERVIEW=Gente que ha contribuido en este proyecto:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiXj\n\n\n Visítanos para más información.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Gente que ha contribuido en este proyecto:\n\n\n%s\n\n\n Visítanos para más información.\n\n%s
 
 SCREENSHOT_SAVED=Pantalla guardada
 SCREENSHOT_FAILED=No se pudo guardar
