--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -548,10 +548,10 @@ ABOUT_CHECK_CHECKING=recherche de mises à jour...
 ABOUT_CHECK_AVAILABLE=Une nouvelle version est disponible
 ABOUT_CHECK_UPTODATE=WorldParty est à jour
 ABOUT_CHECK_CONNECTION=Pas de connexion internet
-ABOUT_OVERVIEW=Découvrez une nouvelle façon de chanter, seul, en couple ou entre amis. \n L'amusement est garanti.\n\nWorldParty est une fork de la version originale Ultrastar Deluxe 1.1 conçu et développé par l'équipe UltraStar España, il compte avec la plus grande communauté de karaoké.\n\n\nCe programme est gratuit et libre sous licence GPL. \n\n Visitez-nous pour plus d'informations.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Découvrez une nouvelle façon de chanter, seul, en couple ou entre amis. \n L'amusement est garanti.\n\nWorldParty est une fork de la version originale Ultrastar Deluxe 1.1 conçu et développé par l'équipe UltraStar España, il compte avec la plus grande communauté de karaoké.\n\n\nCe programme est gratuit et libre sous licence GPL. \n\n Visitez-nous pour plus d'informations.\n%s
 
 DEVELOPERS_TITLE=Développé par
-DEVELOPERS_OVERVIEW=Personnes qui ont contribué à ce projet:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visitez-nous pour plus d'informations.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Personnes qui ont contribué à ce projet:\n\n\n%s\n\n\n Visitez-nous pour plus d'informations.\n%s
 
 SCREENSHOT_SAVED=Capture d'écran sauvegardée
 SCREENSHOT_FAILED=Impossible de sauvegarder la capture
