--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -548,10 +548,10 @@ ABOUT_USDX_DEVELOPEDBY=Desenvolvido por
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
 ;TODO: ABOUT_CHECK_CONNECTION=There is no internet connection
-ABOUT_OVERVIEW=Descubre unha nova forma de cantar, só, en parella ou cos amigos. \n A diversión está garantida.\n\nWorldParty é un fork da versión orixinal Ultrastar Deluxe 1.1 deseñado e desenvolvido polo equipo UltraStar España, conta coa maior comunidade de karaoke.\n\n\nEste programa é gratuíto e libre baixo a licenza GPL. \n\n Visita connosco para obter máis información.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Descubre unha nova forma de cantar, só, en parella ou cos amigos. \n A diversión está garantida.\n\nWorldParty é un fork da versión orixinal Ultrastar Deluxe 1.1 deseñado e desenvolvido polo equipo UltraStar España, conta coa maior comunidade de karaoke.\n\n\nEste programa é gratuíto e libre baixo a licenza GPL. \n\n Visita connosco para obter máis información.\n%s
 
 DEVELOPERS_TITLE=Desenvolvido por
-DEVELOPERS_OVERVIEW=Persoas que contribuíron a este proxecto:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visita connosco para obter máis información.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Persoas que contribuíron a este proxecto:\n\n\n%s\n\n\n Visita connosco para obter máis información.\n%s
 
 SCREENSHOT_SAVED=Pantalla gardada
 SCREENSHOT_FAILED=Non se puido gardar
