--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -548,10 +548,10 @@ ABOUT_CHECK_CHECKING=Verifica nuovi aggiornamenti...
 ABOUT_CHECK_AVAILABLE=C'è una nuova versione disponibile
 ABOUT_CHECK_UPTODATE=WorldParty è stato aggiornato
 ABOUT_CHECK_CONNECTION=Non c'è connessione a Internet
-ABOUT_OVERVIEW=Scopri un nuovo modo di cantare, da solo, in coppia o con gli amici. \n Il divertimento è garantito.\n\nWorldParty è un modifica della versione originale Ultrastar Deluxe 1.1 progettato e sviluppato dal team UltraStar España, conta con la più grande comunità di karaoke.\n\n\nQuesto programma è gratuito e libero sotto licenza GPL. \n\n Visitaci per maggiori informazioni.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Scopri un nuovo modo di cantare, da solo, in coppia o con gli amici. \n Il divertimento è garantito.\n\nWorldParty è un modifica della versione originale Ultrastar Deluxe 1.1 progettato e sviluppato dal team UltraStar España, conta con la più grande comunità di karaoke.\n\n\nQuesto programma è gratuito e libero sotto licenza GPL. \n\n Visitaci per maggiori informazioni.\n%s
 
 DEVELOPERS_TITLE=Sviluppato da
-DEVELOPERS_OVERVIEW=Persone che hanno contribuito a questo progetto:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visitaci per maggiori informazioni.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Persone che hanno contribuito a questo progetto:\n\n\n%s\n\n\n Visitaci per maggiori informazioni.\n%s
 
 SCREENSHOT_SAVED=Screenshot salvato!
 SCREENSHOT_FAILED=Impossibile salvare lo screenshot!
