--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -548,10 +548,10 @@ ABOUT_CHECK_CHECKING=Naujų naujinių tikrinimas...
 ABOUT_CHECK_AVAILABLE=Yra nauja versija
 ABOUT_CHECK_UPTODATE=WorldParty yra atnaujintas
 ABOUT_CHECK_CONNECTION=Nėra interneto ryšio
-ABOUT_OVERVIEW=Atraskite naują būdą dainuoti vieni, poroje ar drauge. \n Pramogos yra garantuotos.\n\nWorldParty yra Ultrastar Deluxe 1.1 originalios versijos šakutės sukurta ir sukurta UltraStar España Team, tai skaičiuojama su didžiausia karaoke bendruomene.\n\n\nŠi programa yra nemokama ir nemokama pagal GPL licenciją. \n\n Aplankykite mus, jei norite gauti daugiau informacijos.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Atraskite naują būdą dainuoti vieni, poroje ar drauge. \n Pramogos yra garantuotos.\n\nWorldParty yra Ultrastar Deluxe 1.1 originalios versijos šakutės sukurta ir sukurta UltraStar España Team, tai skaičiuojama su didžiausia karaoke bendruomene.\n\n\nŠi programa yra nemokama ir nemokama pagal GPL licenciją. \n\n Aplankykite mus, jei norite gauti daugiau informacijos.\n%s
 
 DEVELOPERS_TITLE=Sukurta
-DEVELOPERS_OVERVIEW=Žmonės, prisidėję prie šio projekto:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Žmonės, prisidėję prie šio projekto:\n\n\n%s\n\n\n Visit us for more information.\n%s
 
 ;TODO: SCREENSHOT_SAVED=Screenshot saved
 ;TODO: SCREENSHOT_FAILED=Couldn't save screenshot
