--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -548,10 +548,10 @@ ABOUT_CHECK_CHECKING=Új verzió keresése...
 ABOUT_CHECK_AVAILABLE=Új verzió elérhető
 ABOUT_CHECK_UPTODATE=A WorldParty naprakész
 ABOUT_CHECK_CONNECTION=Nincs Internet kapcsolat
-ABOUT_OVERVIEW=Fedezd fel az éneklés új módját, egyedül vagy párban akár a barátaiddal. \n A szórakozás garantált!\n\nA WorldParty az eredeti Ultrastar Deluxe 1.1-es verziója, amely újra lett szerkesztve az UltraStar Espana Team által, ami most a legnagyobb karaoke közösség.\n\n\nA program ingyenes és a GPL license alá esik. \n\n Több információért látogass el a következő oldalra.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Fedezd fel az éneklés új módját, egyedül vagy párban akár a barátaiddal. \n A szórakozás garantált!\n\nA WorldParty az eredeti Ultrastar Deluxe 1.1-es verziója, amely újra lett szerkesztve az UltraStar Espana Team által, ami most a legnagyobb karaoke közösség.\n\n\nA program ingyenes és a GPL license alá esik. \n\n Több információért látogass el a következő oldalra.\n%s
 
 DEVELOPERS_TITLE=Fejlesztette
-DEVELOPERS_OVERVIEW=Azok a személyek, akik hozzájárultak ehhez a projekthez:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Látogasson el hozzánk további információért.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Azok a személyek, akik hozzájárultak ehhez a projekthez:\n\n\n%s\n\n\n Látogasson el hozzánk további információért.\n%s
 
 SCREENSHOT_SAVED=Képernyőkép mentve
 SCREENSHOT_FAILED=Képernyőkép mentése sikertelen
