--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -548,10 +548,10 @@ ABOUT_CHECK_CHECKING=Controleren op nieuwe update...
 ABOUT_CHECK_AVAILABLE=Er is een nieuwe versie beschikbaar
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
 ABOUT_CHECK_CONNECTION=Er is geen internetverbinding
-ABOUT_OVERVIEW=Ontdek een nieuwe manier van zingen, alleen, in een stel of met vrienden. \n Plezier is gegarandeerd.\n\nWorldParty is een fork van de originele versie Ultrastar Deluxe 1.1 ontworpen en ontwikkeld door UltraStar España team, het telt met de grootste karaoke-gemeenschap.\n\n\nDit programma is gratis en libre onder de GPL-licentie. \n\n Bezoek ons voor meer informatie.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Ontdek een nieuwe manier van zingen, alleen, in een stel of met vrienden. \n Plezier is gegarandeerd.\n\nWorldParty is een fork van de originele versie Ultrastar Deluxe 1.1 ontworpen en ontwikkeld door UltraStar España team, het telt met de grootste karaoke-gemeenschap.\n\n\nDit programma is gratis en libre onder de GPL-licentie. \n\n Bezoek ons voor meer informatie.\n%s
 
 DEVELOPERS_TITLE=Ontwikkeld door
-DEVELOPERS_OVERVIEW=Mensen die hebben bijgedragen aan dit project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Bezoek ons voor meer informatie.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Mensen die hebben bijgedragen aan dit project:\n\n\n%s\n\n\n Bezoek ons voor meer informatie.\n%s
 
 SCREENSHOT_SAVED=Screenshot opgeslagen
 ;TODO: SCREENSHOT_FAILED=Couldn't save screenshot
