--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -548,10 +548,10 @@ ABOUT_CHECK_CHECKING=Sjekker etter nye oppdateringer...
 ABOUT_CHECK_AVAILABLE=Det er en ny versjon tilgjengelig
 ABOUT_CHECK_UPTODATE=WorldParty er oppdatert
 ABOUT_CHECK_CONNECTION=Det er ingen Internett-tilkobling
-ABOUT_OVERVIEW=Oppdag en ny måte å synge, alene, i par eller med venner. \n Moro er garantert.\n\nWorldParty er en fork av den opprinnelige versjonen Ultrastar Deluxe 1.1 designet og utviklet av UltraStar España-laget, teller det med det største karaoke-fellesskapet.\n\n\nDette programmet er gratis og libre under GPL-lisensen. \n\n Besøk oss for mer informasjon.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Oppdag en ny måte å synge, alene, i par eller med venner. \n Moro er garantert.\n\nWorldParty er en fork av den opprinnelige versjonen Ultrastar Deluxe 1.1 designet og utviklet av UltraStar España-laget, teller det med det største karaoke-fellesskapet.\n\n\nDette programmet er gratis og libre under GPL-lisensen. \n\n Besøk oss for mer informasjon.\n%s
 
 DEVELOPERS_TITLE=Utviklet av
-DEVELOPERS_OVERVIEW=Folk som har bidratt til dette prosjektet:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Besøk oss for mer informasjon.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Folk som har bidratt til dette prosjektet:\n\n\n%s\n\n\n Besøk oss for mer informasjon.\n%s
 
 ;TODO: SCREENSHOT_SAVED=Screenshot saved
 ;TODO: SCREENSHOT_FAILED=Couldn't save screenshot
