--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -548,10 +548,10 @@ ABOUT_CHECK_CHECKING=Sprawdzanie nowych aktualizacji...
 ABOUT_CHECK_AVAILABLE=Dostępna jest nowa wersja
 ABOUT_CHECK_UPTODATE=WorldParty jest aktualne
 ABOUT_CHECK_CONNECTION=Brak połączenia z Internetem
-ABOUT_OVERVIEW=Odkryj nowy sposób śpiewania, sam, w parach lub z przyjaciółmi. \n Zabawa jest gwarantowana.\n\nWorldParty jest fork oryginalnej wersji Ultrastar Deluxe 1.1 zaprojektowane i opracowane przez zespół UltraStar España, liczy się z największą społecznością karaoke.\n\n\nTen program jest bezpłatny i libre na licencji GPL. \n\n Odwiedź nas, aby uzyskać więcej informacji.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Odkryj nowy sposób śpiewania, sam, w parach lub z przyjaciółmi. \n Zabawa jest gwarantowana.\n\nWorldParty jest fork oryginalnej wersji Ultrastar Deluxe 1.1 zaprojektowane i opracowane przez zespół UltraStar España, liczy się z największą społecznością karaoke.\n\n\nTen program jest bezpłatny i libre na licencji GPL. \n\n Odwiedź nas, aby uzyskać więcej informacji.\n%s
 
 DEVELOPERS_TITLE=Opracowany przez
-DEVELOPERS_OVERVIEW=Ludzie, którzy przyczynili się do tego projektu:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Ludzie, którzy przyczynili się do tego projektu:\n\n\n%s\n\n\n Visit us for more information.\n%s
 
 SCREENSHOT_SAVED=Zrzut ekranu zapisany
 SCREENSHOT_FAILED=Nie mogę zapisać zrzutu ekranu
