--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -548,10 +548,10 @@ ABOUT_CHECK_CHECKING=Verificando novas atualizações...
 ABOUT_CHECK_AVAILABLE=Existe uma nova versão disponível
 ABOUT_CHECK_UPTODATE=WorldParty está atualizado
 ABOUT_CHECK_CONNECTION=Não há conexão com a Internet
-ABOUT_OVERVIEW=Descubra uma nova maneira de cantar sozinho, em casal ou com amigos. \n A diversão é garantida.\n\nWorldParty é um fork da versão original Ultrastar Deluxe 1.1 projetado e desenvolvido pela equipe UltraStar España, conta com a maior comunidade de karaokê.\n\n\nEste programa é gratuito e libre sob a licença GPL. \n\n Visite-nos para mais informações.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Descubra uma nova maneira de cantar sozinho, em casal ou com amigos. \n A diversão é garantida.\n\nWorldParty é um fork da versão original Ultrastar Deluxe 1.1 projetado e desenvolvido pela equipe UltraStar España, conta com a maior comunidade de karaokê.\n\n\nEste programa é gratuito e libre sob a licença GPL. \n\n Visite-nos para mais informações.\n%s
 
 DEVELOPERS_TITLE=Desenvolvido por
-DEVELOPERS_OVERVIEW=Pessoas que contribuíram para este projeto:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visite-nos para mais informações.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Pessoas que contribuíram para este projeto:\n\n\n%s\n\n\n Visite-nos para mais informações.\n%s
 
 SCREENSHOT_SAVED=Screenshot Guardado
 SCREENSHOT_FAILED=Impossível Guardar Screenshot
