--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -548,10 +548,10 @@ ABOUT_CHECK_CHECKING=Verificarea noilor actualizări...
 ABOUT_CHECK_AVAILABLE=Există o nouă versiune disponibilă
 ABOUT_CHECK_UPTODATE=WorldParty este actualizată
 ABOUT_CHECK_CONNECTION=Nu există o conexiune la Internet
-ABOUT_OVERVIEW=Descoperiți un nou mod de a cânta singur, în cuplu sau cu prietenii.\n Distracția este garantată.\n\nWorldParty este o fork a versiunii originale Ultrastar Deluxe 1.1 proiectat și dezvoltat de echipa UltraStar España, contează cu cea mai mare comunitate de karaoke.\n\n\nAcest program este gratuit și liber în baza licenței GPL. \n\n Vizitați-ne pentru mai multe informații.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Descoperiți un nou mod de a cânta singur, în cuplu sau cu prietenii.\n Distracția este garantată.\n\nWorldParty este o fork a versiunii originale Ultrastar Deluxe 1.1 proiectat și dezvoltat de echipa UltraStar España, contează cu cea mai mare comunitate de karaoke.\n\n\nAcest program este gratuit și liber în baza licenței GPL. \n\n Vizitați-ne pentru mai multe informații.\n%s
 
 DEVELOPERS_TITLE=Dezvoltat de
-DEVELOPERS_OVERVIEW=Persoane care au contribuit la acest proiect:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Vizitați-ne pentru mai multe informații.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Persoane care au contribuit la acest proiect:\n\n\n%s\n\n\n Vizitați-ne pentru mai multe informații.\n%s
 
 SCREENSHOT_SAVED=Captură ecran salvată
 SCREENSHOT_FAILED=Nu s-a putut salva captura ecran
