--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -548,10 +548,10 @@ ABOUT_CHECK_CHECKING=Athugar nýjum uppfærslum...
 ABOUT_CHECK_AVAILABLE=Það er ný útgáfa í boði
 ABOUT_CHECK_UPTODATE=WorldParty er upp til dagsetning
 ABOUT_CHECK_CONNECTION=Það er engin internettenging
-ABOUT_OVERVIEW=Uppgötvaðu nýja leið til að syngja, einn, í pari eða með vinum. \n Gaman er tryggð.\n\nWorldParty er fork af upprunalegu útgáfunni Ultrastar Deluxe 1.1 hannað og þróað af UltraStar España lið, telja það með stærsta Karaoke samfélag.\n\n\nÞetta forrit er ókeypis og libre undir GPL leyfinu. \n\n Heimsókn til okkar fyrir frekari upplýsingar.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Uppgötvaðu nýja leið til að syngja, einn, í pari eða með vinum. \n Gaman er tryggð.\n\nWorldParty er fork af upprunalegu útgáfunni Ultrastar Deluxe 1.1 hannað og þróað af UltraStar España lið, telja það með stærsta Karaoke samfélag.\n\n\nÞetta forrit er ókeypis og libre undir GPL leyfinu. \n\n Heimsókn til okkar fyrir frekari upplýsingar.\n%s
 
 DEVELOPERS_TITLE=Þróað af
-DEVELOPERS_OVERVIEW=Fólk sem hefur lagt sitt af mörkum við þetta verkefni:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Heimsókn til okkar fyrir frekari upplýsingar.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Fólk sem hefur lagt sitt af mörkum við þetta verkefni:\n\n\n%s\n\n\n Heimsókn til okkar fyrir frekari upplýsingar.\n%s
 
 SCREENSHOT_SAVED=Skjámynd vistuð
 SCREENSHOT_FAILED=Gat ekki vistað skjámynd
