--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -548,10 +548,10 @@ ABOUT_CHECK_CHECKING=Έλεγχος για νέες ενημερώσεις...
 ABOUT_CHECK_AVAILABLE=Υπάρχει διαθέσιμη μια νέα έκδοση
 ABOUT_CHECK_UPTODATE=WorldParty είναι ενημερωμένο
 ABOUT_CHECK_CONNECTION=Δεν υπάρχει σύνδεση στο Internet
-;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n%s
 
 DEVELOPERS_TITLE=Αναπτύχθηκε από
-DEVELOPERS_OVERVIEW=Οι άνθρωποι που συνέβαλαν σε αυτό το έργο:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Επισκεφθείτε μας για περισσότερες πληροφορίες.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Οι άνθρωποι που συνέβαλαν σε αυτό το έργο:\n\n\n%s\n\n\n Επισκεφθείτε μας για περισσότερες πληροφορίες.\n%s
 
 ;TODO: SCREENSHOT_SAVED=Screenshot saved
 ;TODO: SCREENSHOT_FAILED=Couldn't save screenshot
