--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -548,10 +548,10 @@ ABOUT_CHECK_CHECKING=Провера нових исправки...
 ABOUT_CHECK_AVAILABLE=Постоји нова верзија доступна
 ABOUT_CHECK_UPTODATE=WorldParty је ажуриран
 ABOUT_CHECK_CONNECTION=Не постоји интернет веза
-ABOUT_OVERVIEW=Откријте нови начин певања, сами, у пару или са пријатељима. \n Забава је загарантована.\n\nWorldParty ВорлдПарти је fork оригиналне верзије Ultrastar Deluxe 1.1 дизајниран и развијен од стране тима Ultrastar España, рачуна се са највећом караоке заједницом.\n\n\nОвај програм је бесплатан и libre под ГПЛ лиценцом. \n\n Посетите нас за више информација.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Откријте нови начин певања, сами, у пару или са пријатељима. \n Забава је загарантована.\n\nWorldParty ВорлдПарти је fork оригиналне верзије Ultrastar Deluxe 1.1 дизајниран и развијен од стране тима Ultrastar España, рачуна се са највећом караоке заједницом.\n\n\nОвај програм је бесплатан и libre под ГПЛ лиценцом. \n\n Посетите нас за више информација.\n%s
 
 DEVELOPERS_TITLE=Развијен од стране
-DEVELOPERS_OVERVIEW=Људи који су допринели овом пројекту:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Посетите нас за више информација.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Људи који су допринели овом пројекту:\n\n\n%s\n\n\n Посетите нас за више информација.\n%s
 
 ;TODO: SCREENSHOT_SAVED=Screenshot saved
 ;TODO: SCREENSHOT_FAILED=Couldn't save screenshot
