--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -548,10 +548,10 @@ ABOUT_USDX_DEVELOPEDBY=Udviklet af
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
 ;TODO: ABOUT_CHECK_CONNECTION=There is no internet connection
-ABOUT_OVERVIEW=Opdag en ny måde at synge, alene, par eller venner med. \n Sjov er garanteret.\n\nWorldParty er en gaffel af den oprindelige version Ultrastar Deluxe 1.1 designet og udviklet af UltraStar España Team, tæller det med det største karaoke-fællesskab.\n\n\nDette program er gratis og libre under GPL-licensen. \n\n Besøg os for mere information.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Opdag en ny måde at synge, alene, par eller venner med. \n Sjov er garanteret.\n\nWorldParty er en gaffel af den oprindelige version Ultrastar Deluxe 1.1 designet og udviklet af UltraStar España Team, tæller det med det største karaoke-fællesskab.\n\n\nDette program er gratis og libre under GPL-licensen. \n\n Besøg os for mere information.\n%s
 
 DEVELOPERS_TITLE=Udviklet af
-DEVELOPERS_OVERVIEW=Folk der har bidraget til dette projekt:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Besøg os for mere information.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Folk der har bidraget til dette projekt:\n\n\n%s\n\n\n Besøg os for mere information.\n%s
 
 ;TODO: SCREENSHOT_SAVED=Screenshot saved
 ;TODO: SCREENSHOT_FAILED=Couldn't save screenshot
