--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -548,10 +548,10 @@ ABOUT_USDX_DEVELOPEDBY=Entwickelt von
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
 ;TODO: ABOUT_CHECK_CONNECTION=There is no internet connection
-;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n%s
 
 DEVELOPERS_TITLE=Entwickelt von
-DEVELOPERS_OVERVIEW=Menschen, die zu diesem Projekt beigetragen haben:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Besuchen Sie uns für weitere Informationen.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Menschen, die zu diesem Projekt beigetragen haben:\n\n\n%s\n\n\n Besuchen Sie uns für weitere Informationen.\n%s
 
 SCREENSHOT_SAVED=Bildschirmfoto gesichert
 SCREENSHOT_FAILED=Konnte Bildschirmfoto nicht sichern
