--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -548,10 +548,10 @@ ABOUT_CHECK_CHECKING=Checking for new updates...
 ABOUT_CHECK_AVAILABLE=There is a new version available
 ABOUT_CHECK_UPTODATE=WorldParty is up to date
 ABOUT_CHECK_CONNECTION=There is no internet connection
-ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n%s
 
 DEVELOPERS_TITLE=Developed by
-DEVELOPERS_OVERVIEW=People who has contributed to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=People who has contributed to this project:\n\n\n%s\n\n\n Visit us for more information.\n%s
 
 SCREENSHOT_SAVED=Screenshot saved
 SCREENSHOT_FAILED=Couldn't save screenshot
