--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -548,10 +548,10 @@ ABOUT_USDX_DEVELOPEDBY=Leasaichte le
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
 ;TODO: ABOUT_CHECK_CONNECTION=There is no internet connection
-;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n%s
 
 DEVELOPERS_TITLE=Leasaichte le
-DEVELOPERS_OVERVIEW=Daoine a tha air cur ris a 'phròiseact seo:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Tadhail oirnne airson barrachd fiosrachaidh.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Daoine a tha air cur ris a 'phròiseact seo:\n\n\n%s\n\n\n Tadhail oirnne airson barrachd fiosrachaidh.\n%s
 
 SCREENSHOT_SAVED=Chaidh an glacadh-sgrìn a shàbhaladh
 SCREENSHOT_FAILED=Cha b’ urrainn dhuinn an glacadh-sgrìn a shàbhaladh
