--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -548,10 +548,10 @@ ABOUT_USDX_DEVELOPEDBY=Razvijen od
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
 ;TODO: ABOUT_CHECK_CONNECTION=There is no internet connection
-ABOUT_OVERVIEW=Otkrijte novi način pjevanja, sam, u paru ili s prijateljima. \n Zabava je zajamčena.\n\nWorldParty je fork izvorne verzije Ultrastar Deluxe 1.1 dizajniran i razvijen od strane UltraStar España tima, to broji s najvećom karaoke zajednice.\n\n\nOvaj je program besplatan i libre pod GPL licencom. \n\n Posjetite nas za više informacija.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Otkrijte novi način pjevanja, sam, u paru ili s prijateljima. \n Zabava je zajamčena.\n\nWorldParty je fork izvorne verzije Ultrastar Deluxe 1.1 dizajniran i razvijen od strane UltraStar España tima, to broji s najvećom karaoke zajednice.\n\n\nOvaj je program besplatan i libre pod GPL licencom. \n\n Posjetite nas za više informacija.\n%s
 
 DEVELOPERS_TITLE=Razvijen od
-DEVELOPERS_OVERVIEW=Ljudi koji su pridonijeli ovom projektu:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Posjetite nas za više informacija.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Ljudi koji su pridonijeli ovom projektu:\n\n\n%s\n\n\n Posjetite nas za više informacija.\n%s
 
 ;TODO: SCREENSHOT_SAVED=Screenshot saved
 ;TODO: SCREENSHOT_FAILED=Couldn't save screenshot
