--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -548,10 +548,10 @@ ABOUT_USDX_DEVELOPEDBY=Vyvinutý
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
 ;TODO: ABOUT_CHECK_CONNECTION=There is no internet connection
-ABOUT_OVERVIEW=Objavte nový spôsob spevu, sám, v páre alebo s priateľmi.\nZábava je zaručená.\n\nWorldParty je odnož pôvodnej verzie Ultrastar Deluxe 1.1 navrhnutý a vyvinutý tímom UltraStar España, počíta s najväčšou karaoke komunitou.\n\n\nTento program je bezplatný (free) a slobodný (libre) pod licenciou GPL. \n\n Navštívte nás pre viac informácií.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Objavte nový spôsob spevu, sám, v páre alebo s priateľmi.\nZábava je zaručená.\n\nWorldParty je odnož pôvodnej verzie Ultrastar Deluxe 1.1 navrhnutý a vyvinutý tímom UltraStar España, počíta s najväčšou karaoke komunitou.\n\n\nTento program je bezplatný (free) a slobodný (libre) pod licenciou GPL. \n\n Navštívte nás pre viac informácií.\n%s
 
 DEVELOPERS_TITLE=Vyvinutý
-DEVELOPERS_OVERVIEW=Ľudia, ktorí prispeli k tomuto projektu:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Navštívte nás pre viac informácií.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Ľudia, ktorí prispeli k tomuto projektu:\n\n\n%s\n\n\n Navštívte nás pre viac informácií.\n%s
 
 SCREENSHOT_SAVED=Snímka obrazovky uložená
 SCREENSHOT_FAILED=Nepodarilo sa uložiť snímku obrazovky
