--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -548,10 +548,10 @@ ABOUT_MAIN=O...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
 ;TODO: ABOUT_CHECK_CONNECTION=There is no internet connection
-ABOUT_OVERVIEW=Odkrijte nov način petja, samega, v paru ali s prijatelji. \n Zabava je zajamčena.\n\nWorldParty je fork originalne verzije Ultrastar Deluxe 1.1 ki ga je razvila in izdelala ekipa UltraStar España, šteje pri največji skupini karaoke.\n\n\nTa program je brezplačen in libre pod licenco GPL. \n\n Obiščite nas za več informacij.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Odkrijte nov način petja, samega, v paru ali s prijatelji. \n Zabava je zajamčena.\n\nWorldParty je fork originalne verzije Ultrastar Deluxe 1.1 ki ga je razvila in izdelala ekipa UltraStar España, šteje pri največji skupini karaoke.\n\n\nTa program je brezplačen in libre pod licenco GPL. \n\n Obiščite nas za več informacij.\n%s
 
 ;TODO: DEVELOPERS_TITLE=Developed by
-DEVELOPERS_OVERVIEW=Ljudje, ki so prispevali k temu projektu:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Obiščite nas za več informacij.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Ljudje, ki so prispevali k temu projektu:\n\n\n%s\n\n\n Obiščite nas za več informacij.\n%s
 
 ;TODO: SCREENSHOT_SAVED=Screenshot saved
 ;TODO: SCREENSHOT_FAILED=Couldn't save screenshot
