--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -548,10 +548,10 @@ ABOUT_USDX_DEVELOPEDBY=Utvecklad av
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
 ;TODO: ABOUT_CHECK_CONNECTION=There is no internet connection
-ABOUT_OVERVIEW=Upptäck ett nytt sätt att sjunga, ensam, i par eller med vänner. \n Fun är garanterad.\n\nWorldParty är en fork av den ursprungliga versionen Ultrastar Deluxe 1.1 designad och utvecklad av UltraStar España-laget, räknas det med den största karaoke-gemenskapen.\n\n\nDetta program är gratis och libre under GPL-licensen. \n\n Besök oss för mer information.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Upptäck ett nytt sätt att sjunga, ensam, i par eller med vänner. \n Fun är garanterad.\n\nWorldParty är en fork av den ursprungliga versionen Ultrastar Deluxe 1.1 designad och utvecklad av UltraStar España-laget, räknas det med den största karaoke-gemenskapen.\n\n\nDetta program är gratis och libre under GPL-licensen. \n\n Besök oss för mer information.\n%s
 
 DEVELOPERS_TITLE=Utvecklad av
-DEVELOPERS_OVERVIEW=Personer som har bidragit till detta projekt:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Besök oss för mer information.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Personer som har bidragit till detta projekt:\n\n\n%s\n\n\n Besök oss för mer information.\n%s
 
 ;TODO: SCREENSHOT_SAVED=Screenshot saved
 ;TODO: SCREENSHOT_FAILED=Couldn't save screenshot
