--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -548,10 +548,10 @@ ABOUT_USDX_DEVELOPEDBY=Vyvinuto
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
 ;TODO: ABOUT_CHECK_CONNECTION=There is no internet connection
-ABOUT_OVERVIEW=Objevte nový způsob zpěvu, sám, v páru nebo s přáteli. \n Zábava je zaručena.\n\nWorldParty je fork původní verze Ultrastar Deluxe 1.1 navržený a vyvinutý týmem UltraStar España, to se počítá s největší karaoke komunitou.\n\n\nTento program je zdarma a libre pod licencí GPL. \n\n Navštivte nás pro více informací.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Objevte nový způsob zpěvu, sám, v páru nebo s přáteli. \n Zábava je zaručena.\n\nWorldParty je fork původní verze Ultrastar Deluxe 1.1 navržený a vyvinutý týmem UltraStar España, to se počítá s největší karaoke komunitou.\n\n\nTento program je zdarma a libre pod licencí GPL. \n\n Navštivte nás pro více informací.\n%s
 
 DEVELOPERS_TITLE=Vyvinuto
-DEVELOPERS_OVERVIEW=Lidé, kteří přispěli k tomuto projektu:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Navštivte nás pro více informací.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Lidé, kteří přispěli k tomuto projektu:\n\n\n%s\n\n\n Navštivte nás pro více informací.\n%s
 
 SCREENSHOT_SAVED=Snímek obrazovky uložen
 SCREENSHOT_FAILED=Uložení snímku obrazovky selhalo
