--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Jugador
 ;TODO: JUKEBOX_MODE=Jukebox mode
 
 ABOUT_MAIN=Quant a...
-ABOUT_USDX_DEVELOPEDBY=Desenvolupat per
+ABOUT_USWP_DEVELOPEDBY=Desenvolupat per
 ABOUT_CHECK_CHECKING=S'estan cercant noves actualitzacions...
 ABOUT_CHECK_AVAILABLE=Hi ha una nova versió disponible
 ABOUT_CHECK_UPTODATE=WorldParty està actualitzat
@@ -552,7 +552,7 @@ SCREENSHOT_SAVED=S'ha desat la captura de pantalla
 MSG_ERROR_TITLE=Error
 ;TODO: MSG_INFO_TITLE=Information
 MSG_QUESTION_TITLE=Qüestió
-MSG_QUIT_USDX=Realment vols sortir d'UltraStar?
+MSG_QUIT_USWP=Realment vols sortir d'UltraStar?
 MSG_END_PARTY=Realment vols sortir del mode festa?
 
 ERROR_NO_SONGS=No hi ha cançons
