--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -536,7 +536,7 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Næste spillere til mikrofonerne
 ;TODO: JUKEBOX_MODE=Jukebox mode
 
 ABOUT_MAIN=Om...
-ABOUT_USDX_DEVELOPEDBY=Udviklet af
+ABOUT_USWP_DEVELOPEDBY=Udviklet af
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
@@ -552,7 +552,7 @@ DEVELOPERS_OVERVIEW=Folk der har bidraget til dette projekt:\n\n\n%s\n\n\n Besø
 MSG_ERROR_TITLE=Fejl
 ;TODO: MSG_INFO_TITLE=Information
 MSG_QUESTION_TITLE=Spørgsmål
-MSG_QUIT_USDX=Vil du virkelig forlade UltraStar?
+MSG_QUIT_USWP=Vil du virkelig forlade UltraStar?
 MSG_END_PARTY=Vil du virkelig forlade fest Modus?
 
 ERROR_NO_SONGS=Ingen Sange hentet
