--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Spieler
 JUKEBOX_MODE=Jukebox Modus
 
 ABOUT_MAIN=Über...
-ABOUT_USDX_DEVELOPEDBY=Entwickelt von
+ABOUT_USWP_DEVELOPEDBY=Entwickelt von
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
@@ -552,7 +552,7 @@ SCREENSHOT_FAILED=Konnte Bildschirmfoto nicht sichern
 MSG_ERROR_TITLE=Fehler
 MSG_INFO_TITLE=Information
 MSG_QUESTION_TITLE=Frage
-MSG_QUIT_USDX=UltraStar wirklich beenden?
+MSG_QUIT_USWP=UltraStar wirklich beenden?
 MSG_END_PARTY=Party-Modus wirklich beenden?
 
 ERROR_NO_SONGS=Keine Songs vorhanden.
