--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Player
 JUKEBOX_MODE=Jukebox mode
 
 ABOUT_MAIN=About...
-ABOUT_USDX_DEVELOPEDBY=Developed by
+ABOUT_USWP_DEVELOPEDBY=Developed by
 ABOUT_CHECK_CHECKING=Checking for new updates...
 ABOUT_CHECK_AVAILABLE=There is a new version available
 ABOUT_CHECK_UPTODATE=WorldParty is up to date
@@ -552,7 +552,7 @@ SCREENSHOT_FAILED=Couldn't save screenshot
 MSG_ERROR_TITLE=Error
 MSG_INFO_TITLE=Information
 MSG_QUESTION_TITLE=Question
-MSG_QUIT_USDX=Really leave UltraStar?
+MSG_QUIT_USWP=Really leave UltraStar?
 MSG_END_PARTY=Really leave party mode?
 
 ERROR_NO_SONGS=No songs loaded
