--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Jugador
 JUKEBOX_MODE=Modo reproductor
 
 ABOUT_MAIN=Acerca de...
-ABOUT_USDX_DEVELOPEDBY=Desarrollado por
+ABOUT_USWP_DEVELOPEDBY=Desarrollado por
 ABOUT_CHECK_CHECKING=Buscando actualizaciones...
 ABOUT_CHECK_AVAILABLE=Hay disponible una nueva versión
 ABOUT_CHECK_UPTODATE=WorldParty está actualizado
@@ -552,7 +552,7 @@ SCREENSHOT_FAILED=No se pudo guardar
 MSG_ERROR_TITLE=Error
 MSG_INFO_TITLE=Información
 MSG_QUESTION_TITLE=Pregunta
-MSG_QUIT_USDX=¿Seguro que quieres salir?
+MSG_QUIT_USWP=¿Seguro que quieres salir?
 MSG_END_PARTY=¿Seguro que quieres salir del modo fiesta?
 
 ERROR_NO_SONGS=No hay canciones
