--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -536,7 +536,7 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Hurrengoa mikrofonora
 ;TODO: JUKEBOX_MODE=Jukebox mode
 
 ;TODO: ABOUT_MAIN=About...
-;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
+;TODO: ABOUT_USWP_DEVELOPEDBY=Developed by
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
@@ -552,7 +552,7 @@ SCREENSHOT_FAILED=Pantaila irudia ezin izan da gorde
 MSG_ERROR_TITLE=Hutsa
 MSG_INFO_TITLE=Informazioa
 MSG_QUESTION_TITLE=Galdera
-MSG_QUIT_USDX=Ziur zaude irten nahi duzula?
+MSG_QUIT_USWP=Ziur zaude irten nahi duzula?
 MSG_END_PARTY=Ziur zaude talde jokoa bukatu nahi duzula?
 
 ERROR_NO_SONGS=Ez dago abestirik
