--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Joueur
 JUKEBOX_MODE=Mode Jukebox
 
 ABOUT_MAIN=À propos...
-ABOUT_USDX_DEVELOPEDBY=Développé par
+ABOUT_USWP_DEVELOPEDBY=Développé par
 ABOUT_CHECK_CHECKING=recherche de mises à jour...
 ABOUT_CHECK_AVAILABLE=Une nouvelle version est disponible
 ABOUT_CHECK_UPTODATE=WorldParty est à jour
@@ -552,7 +552,7 @@ SCREENSHOT_FAILED=Impossible de sauvegarder la capture
 MSG_ERROR_TITLE=Erreur
 MSG_INFO_TITLE=Information
 MSG_QUESTION_TITLE=Confirmation
-MSG_QUIT_USDX=Quitter le jeu ?
+MSG_QUIT_USWP=Quitter le jeu ?
 MSG_END_PARTY=Quitter la fête ?
 
 ERROR_NO_SONGS=Chansons introuvables
