--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Xogador
 ;TODO: JUKEBOX_MODE=Jukebox mode
 
 ABOUT_MAIN=Acerca de...
-ABOUT_USDX_DEVELOPEDBY=Desenvolvido por
+ABOUT_USWP_DEVELOPEDBY=Desenvolvido por
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
@@ -552,7 +552,7 @@ SCREENSHOT_FAILED=Non se puido gardar
 MSG_ERROR_TITLE=Erro
 MSG_INFO_TITLE=Información
 MSG_QUESTION_TITLE=Pregunta
-MSG_QUIT_USDX=Seguro que queres saír?
+MSG_QUIT_USWP=Seguro que queres saír?
 MSG_END_PARTY=Seguro que queres saír do modo festa?
 
 ERROR_NO_SONGS=Non hai cancións
