--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Cluicheadair
 JUKEBOX_MODE=Modh an inneil-chlàr
 
 ABOUT_MAIN=Mu dhèidhinn…
-ABOUT_USDX_DEVELOPEDBY=Leasaichte le
+ABOUT_USWP_DEVELOPEDBY=Leasaichte le
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
@@ -552,7 +552,7 @@ SCREENSHOT_FAILED=Cha b’ urrainn dhuinn an glacadh-sgrìn a shàbhaladh
 MSG_ERROR_TITLE=Mearachd
 MSG_INFO_TITLE=Fiosrachadh
 MSG_QUESTION_TITLE=Ceist
-MSG_QUIT_USDX=A bheil thu airson UltraStar fhàgail?
+MSG_QUIT_USWP=A bheil thu airson UltraStar fhàgail?
 MSG_END_PARTY=A bheil thu airson am modh cèilidh fhàgail?
 
 ERROR_NO_SONGS=Cha deach òran a luchdadh
