--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Giocatore
 JUKEBOX_MODE=Modalità Jukebox
 
 ABOUT_MAIN=Sul gioco
-ABOUT_USDX_DEVELOPEDBY=Sviluppato da
+ABOUT_USWP_DEVELOPEDBY=Sviluppato da
 ABOUT_CHECK_CHECKING=Verifica nuovi aggiornamenti...
 ABOUT_CHECK_AVAILABLE=C'è una nuova versione disponibile
 ABOUT_CHECK_UPTODATE=WorldParty è stato aggiornato
@@ -552,7 +552,7 @@ SCREENSHOT_FAILED=Impossibile salvare lo screenshot!
 MSG_ERROR_TITLE=Errore
 MSG_INFO_TITLE=Informazione
 MSG_QUESTION_TITLE=Domanda
-MSG_QUIT_USDX=Vuoi davvero uscire da UltraStar?
+MSG_QUIT_USWP=Vuoi davvero uscire da UltraStar?
 MSG_END_PARTY=Vuoi davvero terminare la Modalità Party?
 
 ERROR_NO_SONGS=Nessuna Canzone caricata!
