--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Žaidėjas
 JUKEBOX_MODE=Jukebox režimas
 
 ABOUT_MAIN=Apie...
-ABOUT_USDX_DEVELOPEDBY=Sukūrė
+ABOUT_USWP_DEVELOPEDBY=Sukūrė
 ABOUT_CHECK_CHECKING=Naujų naujinių tikrinimas...
 ABOUT_CHECK_AVAILABLE=Yra nauja versija
 ABOUT_CHECK_UPTODATE=WorldParty yra atnaujintas
@@ -552,7 +552,7 @@ DEVELOPERS_OVERVIEW=Žmonės, prisidėję prie šio projekto:\n\n\n%s\n\n\n Visi
 MSG_ERROR_TITLE=Klaida
 ;TODO: MSG_INFO_TITLE=Information
 ;TODO: MSG_QUESTION_TITLE=Question
-;TODO: MSG_QUIT_USDX=Really leave UltraStar?
+;TODO: MSG_QUIT_USWP=Really leave UltraStar?
 ;TODO: MSG_END_PARTY=Really leave party mode?
 
 ;TODO: ERROR_NO_SONGS=No songs loaded
