--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -536,7 +536,7 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Déi nächst Spiller un är Mikroen!
 ;TODO: JUKEBOX_MODE=Jukebox mode
 
 ABOUT_MAIN=Iwwer...
-;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
+;TODO: ABOUT_USWP_DEVELOPEDBY=Developed by
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
@@ -552,7 +552,7 @@ SCREENSHOT_FAILED=Screenshot kann net gespäichert ginn.
 MSG_ERROR_TITLE=Feeler
 MSG_INFO_TITLE=Informatioun
 MSG_QUESTION_TITLE=Bestätegung
-MSG_QUIT_USDX=UltraStar wierklech verloossen?
+MSG_QUIT_USWP=UltraStar wierklech verloossen?
 MSG_END_PARTY=Party wierklech verloossen?
 
 ERROR_NO_SONGS=Keng Lidder fonnt
