--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Játékos
 JUKEBOX_MODE=Zenedoboz Mód
 
 ABOUT_MAIN=Rólunk...
-ABOUT_USDX_DEVELOPEDBY=Fejlesztette
+ABOUT_USWP_DEVELOPEDBY=Fejlesztette
 ABOUT_CHECK_CHECKING=Új verzió keresése...
 ABOUT_CHECK_AVAILABLE=Új verzió elérhető
 ABOUT_CHECK_UPTODATE=A WorldParty naprakész
@@ -552,7 +552,7 @@ SCREENSHOT_FAILED=Képernyőkép mentése sikertelen
 MSG_ERROR_TITLE=Hiba
 MSG_INFO_TITLE=Infó
 MSG_QUESTION_TITLE=Kérdés
-MSG_QUIT_USDX=Biztos elhagyod az UltraStar színpadát?
+MSG_QUIT_USWP=Biztos elhagyod az UltraStar színpadát?
 MSG_END_PARTY=Biztos kilépsz a Buli módból?
 
 ERROR_NO_SONGS=Nincs dal betöltve
