--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Speler
 ;TODO: JUKEBOX_MODE=Jukebox mode
 
 ABOUT_MAIN=Over...
-ABOUT_USDX_DEVELOPEDBY=Ontwikkeld door
+ABOUT_USWP_DEVELOPEDBY=Ontwikkeld door
 ABOUT_CHECK_CHECKING=Controleren op nieuwe update...
 ABOUT_CHECK_AVAILABLE=Er is een nieuwe versie beschikbaar
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
@@ -552,7 +552,7 @@ SCREENSHOT_SAVED=Screenshot opgeslagen
 MSG_ERROR_TITLE=Error
 ;TODO: MSG_INFO_TITLE=Information
 MSG_QUESTION_TITLE=Vraag
-MSG_QUIT_USDX=Uit met de pret?
+MSG_QUIT_USWP=Uit met de pret?
 MSG_END_PARTY=Stoppen met de Party?
 
 ERROR_NO_SONGS=Geen liedjes geladen
