--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Gracz
 JUKEBOX_MODE=Tryb szafy grającej
 
 ABOUT_MAIN=Informacje...
-ABOUT_USDX_DEVELOPEDBY=Opracowany przez
+ABOUT_USWP_DEVELOPEDBY=Opracowany przez
 ABOUT_CHECK_CHECKING=Sprawdzanie nowych aktualizacji...
 ABOUT_CHECK_AVAILABLE=Dostępna jest nowa wersja
 ABOUT_CHECK_UPTODATE=WorldParty jest aktualne
@@ -552,7 +552,7 @@ SCREENSHOT_FAILED=Nie mogę zapisać zrzutu ekranu
 MSG_ERROR_TITLE=Błąd
 MSG_INFO_TITLE=Informacja
 MSG_QUESTION_TITLE=Pytanie
-MSG_QUIT_USDX=Czy na prawdę chcesz opuścić UltraStar?
+MSG_QUIT_USWP=Czy na prawdę chcesz opuścić UltraStar?
 MSG_END_PARTY=Na pewno chcesz zakończyć tryb imprezy?
 
 ERROR_NO_SONGS=Brak piosenek
