--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Jogador
 JUKEBOX_MODE=Modo Jukebox
 
 ABOUT_MAIN=Sobre...
-ABOUT_USDX_DEVELOPEDBY=Desenvolvido por
+ABOUT_USWP_DEVELOPEDBY=Desenvolvido por
 ABOUT_CHECK_CHECKING=Verificando novas atualizações...
 ABOUT_CHECK_AVAILABLE=Existe uma nova versão disponível
 ABOUT_CHECK_UPTODATE=WorldParty está atualizado
@@ -552,7 +552,7 @@ SCREENSHOT_FAILED=Impossível Guardar Screenshot
 MSG_ERROR_TITLE=Erro
 MSG_INFO_TITLE=Informação
 MSG_QUESTION_TITLE=Questão
-MSG_QUIT_USDX=Deseja mesmo sair do UltraStar?
+MSG_QUIT_USWP=Deseja mesmo sair do UltraStar?
 MSG_END_PARTY=Deseja mesmo terminar o Modo Festa?
 
 ERROR_NO_SONGS=Nenhuma Canção lida
