--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Jucător
 ;TODO: JUKEBOX_MODE=Jukebox mode
 
 ABOUT_MAIN=Despre...
-ABOUT_USDX_DEVELOPEDBY=Dezvoltat de
+ABOUT_USWP_DEVELOPEDBY=Dezvoltat de
 ABOUT_CHECK_CHECKING=Verificarea noilor actualizări...
 ABOUT_CHECK_AVAILABLE=Există o nouă versiune disponibilă
 ABOUT_CHECK_UPTODATE=WorldParty este actualizată
@@ -552,7 +552,7 @@ SCREENSHOT_FAILED=Nu s-a putut salva captura ecran
 MSG_ERROR_TITLE=Eroare
 MSG_INFO_TITLE=Informaţii
 MSG_QUESTION_TITLE=Întrebare
-MSG_QUIT_USDX=Chiar ieşi?
+MSG_QUIT_USWP=Chiar ieşi?
 MSG_END_PARTY=Chiar ieşi din modul party?
 
 ERROR_NO_SONGS=Nu există cântece
