--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Hráč
 ;TODO: JUKEBOX_MODE=Jukebox mode
 
 ABOUT_MAIN=O...
-ABOUT_USDX_DEVELOPEDBY=Vyvinutý
+ABOUT_USWP_DEVELOPEDBY=Vyvinutý
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
@@ -552,7 +552,7 @@ SCREENSHOT_FAILED=Nepodarilo sa uložiť snímku obrazovky
 MSG_ERROR_TITLE=Chyba
 MSG_INFO_TITLE=Informácia
 MSG_QUESTION_TITLE=Otázka
-MSG_QUIT_USDX=Skutočne chcete ukončiť UltraStar?
+MSG_QUIT_USWP=Skutočne chcete ukončiť UltraStar?
 MSG_END_PARTY=Skutočne chcete ukončiť párty mód?
 
 ERROR_NO_SONGS=Žiadna skladba
