--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Pelaaja
 ;TODO: JUKEBOX_MODE=Jukebox mode
 
 ;TODO: ABOUT_MAIN=About...
-;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
+;TODO: ABOUT_USWP_DEVELOPEDBY=Developed by
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
@@ -552,7 +552,7 @@ NAME_CURRENT_PLAYER=Pelaaja
 MSG_ERROR_TITLE=Virhe
 MSG_INFO_TITLE=Informaatio
 MSG_QUESTION_TITLE=Kysymys
-MSG_QUIT_USDX=Tahdotko todella sulkea UltraStarin?
+MSG_QUIT_USWP=Tahdotko todella sulkea UltraStarin?
 MSG_END_PARTY=Tahdotko todella sulkea Tiimilaulun?
 
 ERROR_NO_SONGS=Ei kappaleita
