--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Leikmaður
 ;TODO: JUKEBOX_MODE=Jukebox mode
 
 ABOUT_MAIN=Um...
-ABOUT_USDX_DEVELOPEDBY=Þróað af
+ABOUT_USWP_DEVELOPEDBY=Þróað af
 ABOUT_CHECK_CHECKING=Athugar nýjum uppfærslum...
 ABOUT_CHECK_AVAILABLE=Það er ný útgáfa í boði
 ABOUT_CHECK_UPTODATE=WorldParty er upp til dagsetning
@@ -552,7 +552,7 @@ SCREENSHOT_FAILED=Gat ekki vistað skjámynd
 MSG_ERROR_TITLE=Villa
 MSG_INFO_TITLE=Upplýsingar
 MSG_QUESTION_TITLE=Spurning
-MSG_QUIT_USDX=Viltu hætta í UltraStar?
+MSG_QUIT_USWP=Viltu hætta í UltraStar?
 MSG_END_PARTY=Virkilega hætta í Partí?
 
 ERROR_NO_SONGS=Engum lögum hlaðið inn
