--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -536,7 +536,7 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Další hráč k mikrofonu
 ;TODO: JUKEBOX_MODE=Jukebox mode
 
 ;TODO: ABOUT_MAIN=About...
-ABOUT_USDX_DEVELOPEDBY=Vyvinuto
+ABOUT_USWP_DEVELOPEDBY=Vyvinuto
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
@@ -552,7 +552,7 @@ SCREENSHOT_FAILED=Uložení snímku obrazovky selhalo
 MSG_ERROR_TITLE=Chyba
 MSG_INFO_TITLE=Info
 MSG_QUESTION_TITLE=Potvrzení
-MSG_QUIT_USDX=Opravdu ukončit UltraStar?
+MSG_QUIT_USWP=Opravdu ukončit UltraStar?
 MSG_END_PARTY=Opravdu ukončit párty mód?
 
 ERROR_NO_SONGS=Žádné skladby nenačteny
