--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -536,7 +536,7 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=下位演唱歌手
 ;TODO: JUKEBOX_MODE=Jukebox mode
 
 ;TODO: ABOUT_MAIN=About...
-ABOUT_USDX_DEVELOPEDBY=由开发
+ABOUT_USWP_DEVELOPEDBY=由开发
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
@@ -552,7 +552,7 @@ SCREENSHOT_FAILED=无法保存截图
 MSG_ERROR_TITLE=错误
 MSG_INFO_TITLE=信息
 MSG_QUESTION_TITLE=确认
-MSG_QUIT_USDX=确定离开UltraStar？
+MSG_QUIT_USWP=确定离开UltraStar？
 MSG_END_PARTY=确定离开派对模式？
 
 ERROR_NO_SONGS=未载入歌曲
