--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Igrač
 ;TODO: JUKEBOX_MODE=Jukebox mode
 
 ABOUT_MAIN=Oko...
-ABOUT_USDX_DEVELOPEDBY=Razvijen od
+ABOUT_USWP_DEVELOPEDBY=Razvijen od
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
@@ -552,7 +552,7 @@ DEVELOPERS_OVERVIEW=Ljudi koji su pridonijeli ovom projektu:\n\n\n%s\n\n\n Posje
 MSG_ERROR_TITLE=Greška
 ;TODO: MSG_INFO_TITLE=Information
 MSG_QUESTION_TITLE=Pitanje
-MSG_QUIT_USDX=Napustiti UltraStar?
+MSG_QUIT_USWP=Napustiti UltraStar?
 MSG_END_PARTY=Napustiti Party igru?
 
 ERROR_NO_SONGS=Nema učitanih pjesama
