--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Spiller
 ;TODO: JUKEBOX_MODE=Jukebox mode
 
 ABOUT_MAIN=Handle om...
-ABOUT_USDX_DEVELOPEDBY=Utviklet av
+ABOUT_USWP_DEVELOPEDBY=Utviklet av
 ABOUT_CHECK_CHECKING=Sjekker etter nye oppdateringer...
 ABOUT_CHECK_AVAILABLE=Det er en ny versjon tilgjengelig
 ABOUT_CHECK_UPTODATE=WorldParty er oppdatert
@@ -552,7 +552,7 @@ DEVELOPERS_OVERVIEW=Folk som har bidratt til dette prosjektet:\n\n\n%s\n\n\n Bes
 MSG_ERROR_TITLE=Feil
 ;TODO: MSG_INFO_TITLE=Information
 MSG_QUESTION_TITLE=Spørsmål
-MSG_QUIT_USDX=Vil du virkelig avslutte UltraStar?
+MSG_QUIT_USWP=Vil du virkelig avslutte UltraStar?
 MSG_END_PARTY=Vil du virkelig forlate party-modusen?
 
 ERROR_NO_SONGS=Ingen sanger lastet
