--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -536,7 +536,7 @@ NAME_CURRENT_PLAYER=Spelare
 ;TODO: JUKEBOX_MODE=Jukebox mode
 
 ABOUT_MAIN=Handla om...
-ABOUT_USDX_DEVELOPEDBY=Utvecklad av
+ABOUT_USWP_DEVELOPEDBY=Utvecklad av
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
@@ -552,7 +552,7 @@ DEVELOPERS_OVERVIEW=Personer som har bidragit till detta projekt:\n\n\n%s\n\n\n 
 MSG_ERROR_TITLE=Fel
 ;TODO: MSG_INFO_TITLE=Information
 MSG_QUESTION_TITLE=Fråga
-MSG_QUIT_USDX=Vill du verkligen avsluta UltraStar?
+MSG_QUIT_USWP=Vill du verkligen avsluta UltraStar?
 MSG_END_PARTY=Vill du verkligen avsluta partyläge?
 
 ERROR_NO_SONGS=Inga låtar laddade
