--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -536,7 +536,7 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=次のプレイヤーがマイクを
 ;TODO: JUKEBOX_MODE=Jukebox mode
 
 ;TODO: ABOUT_MAIN=About...
-ABOUT_USDX_DEVELOPEDBY=によって開発された
+ABOUT_USWP_DEVELOPEDBY=によって開発された
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
@@ -552,7 +552,7 @@ DEVELOPERS_OVERVIEW=このプロジェクトに貢献した人々:\n\n\n%s\n\n\n
 MSG_ERROR_TITLE=エラー
 ;TODO: MSG_INFO_TITLE=Information
 MSG_QUESTION_TITLE=確認
-MSG_QUIT_USDX=本当にゲームをやめる？
+MSG_QUIT_USWP=本当にゲームをやめる？
 MSG_END_PARTY=本当にパーティーモードをやめる？
 
 ERROR_NO_SONGS=曲はロードしてない
